[gd_scene load_steps=10 format=2]

[ext_resource path="res://Image/images_faculdade/pagina_conteudo.png" type="Texture" id=1]
[ext_resource path="res://Faculdade/Scripts/Conteudo.gd" type="Script" id=2]
[ext_resource path="res://Image/images_faculdade/but_Inf.png" type="Texture" id=3]
[ext_resource path="res://Image/images_faculdade/but_MatFIN.png" type="Texture" id=4]
[ext_resource path="res://Image/images_faculdade/Confirma.png" type="Texture" id=5]
[ext_resource path="res://Image/images_faculdade/button_JurosCompostos.png" type="Texture" id=6]
[ext_resource path="res://Image/images_faculdade/button_RendaFixa.png" type="Texture" id=7]
[ext_resource path="res://Image/images_faculdade/button_JurosSimples.png" type="Texture" id=8]
[ext_resource path="res://Image/images_faculdade/button_FI.png" type="Texture" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="ParallaxBackground"]
anchor_left = 0.697
anchor_top = 0.059
anchor_right = 0.697
anchor_bottom = 0.059
margin_left = -14.728
margin_top = -14.4
margin_right = 15.272
margin_bottom = 14.6
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_MatFin" type="Button" parent="ParallaxBackground"]
anchor_left = 0.524
anchor_top = 0.193
anchor_right = 0.524
anchor_bottom = 0.193
margin_left = -185.576
margin_top = -31.8
margin_right = 185.424
margin_bottom = 31.2
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/Button_MatFin"]
visible = false
anchor_left = 0.927
anchor_top = 0.484
anchor_right = 0.927
anchor_bottom = 0.484
margin_left = -19.917
margin_top = -19.492
margin_right = 20.083
margin_bottom = 20.508
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Inflacao" type="Button" parent="ParallaxBackground"]
visible = false
anchor_left = 0.348
anchor_top = 0.327
anchor_right = 0.348
anchor_bottom = 0.327
margin_left = -5.35202
margin_top = -31.2
margin_right = 365.648
margin_bottom = 31.8
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/Button_Inflacao"]
visible = false
anchor_left = 0.926
anchor_top = 0.5
anchor_right = 0.926
anchor_bottom = 0.5
margin_left = -19.546
margin_top = -21.5
margin_right = 20.454
margin_bottom = 18.5
texture = ExtResource( 5 )

[node name="Button_JurosSimples" type="Button" parent="ParallaxBackground"]
visible = false
margin_left = 351.0
margin_top = 246.0
margin_right = 722.0
margin_bottom = 309.0
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/Button_JurosSimples"]
visible = false
margin_left = 324.0
margin_top = 11.0
margin_right = 364.0
margin_bottom = 51.0
texture = ExtResource( 5 )

[node name="Button_JurosCompostos" type="Button" parent="ParallaxBackground"]
visible = false
margin_left = 351.0
margin_top = 327.0
margin_right = 724.0
margin_bottom = 391.0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/Button_JurosCompostos"]
visible = false
margin_left = 324.0
margin_top = 10.0
margin_right = 364.0
margin_bottom = 50.0
texture = ExtResource( 5 )

[node name="Button_RendaFixa" type="Button" parent="ParallaxBackground"]
visible = false
margin_left = 351.0
margin_top = 408.0
margin_right = 722.0
margin_bottom = 471.0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/Button_RendaFixa"]
visible = false
margin_left = 324.0
margin_top = 10.0
margin_right = 364.0
margin_bottom = 50.0
texture = ExtResource( 5 )

[node name="Button_FI" type="Button" parent="ParallaxBackground"]
visible = false
margin_left = 351.0
margin_top = 489.0
margin_right = 722.0
margin_bottom = 552.0
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/Button_FI"]
visible = false
margin_left = 323.0
margin_top = 10.0
margin_right = 363.0
margin_bottom = 50.0
texture = ExtResource( 5 )

[connection signal="pressed" from="ParallaxBackground/Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="ParallaxBackground/Button_MatFin" to="." method="_on_Button_MatFin_pressed"]
[connection signal="pressed" from="ParallaxBackground/Button_Inflacao" to="." method="_on_Button_Inflacao_pressed"]
[connection signal="pressed" from="ParallaxBackground/Button_JurosSimples" to="." method="_on_Button_JurosSimples_pressed"]
[connection signal="pressed" from="ParallaxBackground/Button_JurosCompostos" to="." method="_on_Button_JurosCompostos_pressed"]
[connection signal="pressed" from="ParallaxBackground/Button_RendaFixa" to="." method="_on_Button_RendaFixa_pressed"]
[connection signal="pressed" from="ParallaxBackground/Button_FI" to="." method="_on_Button_FI_pressed"]
